orfr addressing sonarqube findings from UC